--- a/AutoCAD_Windows/AutoCAD_Windows/Textstyle.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Textstyle.xaml
@@ -77,37 +77,34 @@
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="5*" />
-                <ColumnDefinition Width="9*"/>
-                <ColumnDefinition Width="4*"/>
+                <ColumnDefinition Width="9*" />
+                <ColumnDefinition Width="4*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="5*" />
-                <RowDefinition Height="4*"/>
-                <RowDefinition Height="6*"/>
+                <RowDefinition Height="4*" />
+                <RowDefinition Height="6*" />
             </Grid.RowDefinitions>
             <ListBox Grid.RowSpan="2"
-                     Margin="10,10,10,10">
-                
-            </ListBox>
+                     Margin="10,10,10,10"></ListBox>
             <GroupBox Grid.Column="1"
                       Header="Font">
                 <UniformGrid Columns="2">
                     <TextBlock>
                         <TextBlock.Text>
                             <Binding Path="FontBox1"
-                                     FallbackValue="Font Name:"/>
+                                     FallbackValue="Font Name:" />
                         </TextBlock.Text></TextBlock>
                     <TextBlock>
                         <TextBlock.Text>
                             <Binding Path="FontBox1"
                                      FallbackValue="Font Style:" />
-                        </TextBlock.Text>
-                    </TextBlock>
+                        </TextBlock.Text></TextBlock>
                     <ComboBox Grid.Row="1"
                               Height="25"
                               HorizontalAlignment="Left"
                               Width="150"
-                              Margin="5,0,5,0"/>
+                              Margin="5,0,5,0" />
                     <ComboBox Grid.Row="1"
                               Height="25"
                               HorizontalAlignment="Left"
@@ -126,14 +123,12 @@
                         <TextBlock.Text>
                             <Binding Path="SizeName"
                                      FallbackValue="Height" />
-                        </TextBlock.Text>
-                    </TextBlock>
+                        </TextBlock.Text></TextBlock>
                     <CheckBox Grid.Row="2"
                               Margin="20,0,0,0">
                         <TextBlock Margin="0,0,0,0">
                             Match text orientation<LineBreak />
-                            to layout
-                        </TextBlock>
+                            to layout</TextBlock>
                     </CheckBox>
                     <TextBox Name="Size_TextBox" />
                 </UniformGrid>
@@ -159,8 +154,8 @@
                          Rows="2"
                          Height="90"
                          VerticalAlignment="Top">
-                <Button Content="New..."/>
-                <Button Content="Delete"/>
+                <Button Content="New..." />
+                <Button Content="Delete" />
             </UniformGrid>
         </Grid>
         <UniformGrid Columns="2"
