--- a/AutoCAD_Windows/AutoCAD_Windows/Lineweight.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Lineweight.xaml
@@ -49,7 +49,7 @@
                             Value="25" />
                 </Style>
             </Grid.Resources>
-            <TextBlock>Schematic Wires Editor</TextBlock>
+            <TextBlock>Lineweight</TextBlock>
             <TextBlock Grid.ColumnSpan="2"
                        Height="25"
                        Margin="0,0,75,0" />
@@ -85,7 +85,8 @@
                 </Button.Style>
             </Button>
         </Grid>
-        <ListView Grid.Row="1"
+        <ListView x:Name="Lineweights"
+                  Grid.Row="1"
                   Margin="15,0,15,0"
                   SelectionMode="Single">
             <ListView.Resources>
@@ -102,11 +103,6 @@
                             Value="Black" />
                 </Style>
             </ListView.Resources>
-            <ListView.SelectedIndex>
-                <Binding Converter="{StaticResource LineweightConverter}"
-                         ConverterParameter="1"
-                         Path="SelectedLineweight" />
-            </ListView.SelectedIndex>
             <ListViewItem>
                 <UniformGrid Columns="2"
                              Width="226">
@@ -114,14 +110,14 @@
                     <TextBlock>Default</TextBlock>
                 </UniformGrid>
             </ListViewItem>
-            <ListViewItem>
+            <ListViewItem x:Name="ByBlock">
                 <UniformGrid Columns="2"
                              Width="226">
                     <Line StrokeThickness="1" />
                     <TextBlock>By Block</TextBlock>
                 </UniformGrid>
             </ListViewItem>
-            <ListViewItem>
+            <ListViewItem x:Name="ByLayer">
                 <UniformGrid Columns="2"
                              Width="226">
                     <Line StrokeThickness="1" />
