--- a/AutoCAD_Windows/AutoCAD_Windows/LayerTransparency.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/LayerTransparency.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="AutoCAD_Windows.LayerTransparency"
+﻿<Window x:Class="WindowDictionary.LayerTransparency"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AutoCAD_Windows"
-        xmlns:converter="clr-namespace:AutoCAD_Windows.Converters"
+        xmlns:local="clr-namespace:WindowDictionary"
+        xmlns:converter="clr-namespace:WindowDictionary.Converters"
         mc:Ignorable="d"
         Title="LayerTransparency" 
         Height="175"
