--- a/AutoCAD_Windows/AutoCAD_Windows/Property/PropertyEditor.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/PropertyEditor.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Class="AutoCAD_Windows.PropertyEditor"
+﻿<Window x:Class="WindowDictionary.Property.PropertyEditor"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AutoCAD_Windows"
+        xmlns:local="clr-namespace:WindowDictionary.Property"
+        xmlns:converter="clr-namespace:WindowDictionary.Converters"
         mc:Ignorable="d"
         Height="450" 
         ResizeMode="NoResize"
@@ -13,7 +14,7 @@
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="StyleDictionary.xaml" />
+                <ResourceDictionary Source="../StyleDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
@@ -28,6 +29,16 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
+        <Grid.Resources>
+            <converter:ListViewPropertyConverter x:Key="ListViewPropertyConverter" />
+            <HierarchicalDataTemplate DataType="{x:Type local:PropertyGroup}"
+                                      ItemsSource="{Binding Path=PropertyGroups}">
+                <TextBlock>
+                    <TextBlock.Text>
+                        <Binding Path="Title" />
+                    </TextBlock.Text></TextBlock>
+            </HierarchicalDataTemplate>
+        </Grid.Resources>
         <TextBlock Text="Property Editor" />
         <TextBlock Grid.ColumnSpan="2"
                    Height="25"/>
@@ -38,24 +49,29 @@
                    Grid.Row="1"
                    HorizontalAlignment="Center"
                    Text="Properties" />
-        <TreeView x:Name="PropertyGroup" Grid.Row="2"
+        <TreeView x:Name="Tree"
+                  Grid.Row="2"
+                  ItemsSource="{Binding Path=PropertyGroups}"
+                  SelectedItemChanged="Tree_SelectedItemChanged"
                   Margin="10,10,10,10">
-            
         </TreeView>
-        <ListView x:Name="Properties" 
+        <ListView x:Name="Properties"
                   Grid.Column="1"
                   Grid.Row="2"
                   Margin="10,10,10,10">
-            
+            <ListView.ItemsSource>
+                <Binding Path="SelectedPropertyGroup.PropertyItems"
+                         Converter="{StaticResource ListViewPropertyConverter}"/>
+            </ListView.ItemsSource>
         </ListView>
         <UniformGrid Columns="2"
                      Grid.Column="1"
                      Grid.Row="3"
                      HorizontalAlignment="Right"
                      Width="250">
-            <Button Content="OK" />
-            <Button Content="Cancel" />
+            <Button Click="OK_Click"
+                    Content="OK" />
+            <Button Click="Cancel_Click" Content="Cancel" />
         </UniformGrid>
-        
     </Grid>
 </Window>
