--- a/AutoCAD_Windows/AutoCAD_Windows/StyleDictionary.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/StyleDictionary.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:AutoCAD_Windows">
+                    xmlns:local="clr-namespace:WindowDictionary">
     <Style TargetType="Button">
         <Setter Property="Width"
                 Value="112" />
