--- a/AutoCAD_Windows/AutoCAD_Windows/Property/ListItemBoolean.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/ListItemBoolean.xaml
@@ -1,34 +1,40 @@
-﻿<UserControl x:Class="WindowDictionary.Property.ListItemBoolean"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WindowDictionary.Property"
-             mc:Ignorable="d" 
-             d:DesignHeight="25">
-    <UserControl.Resources>
+﻿<ListViewItem x:Class="WindowDictionary.Property.ListItemBoolean"
+              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+              xmlns:local="clr-namespace:WindowDictionary.Property"
+              mc:Ignorable="d"
+              MinHeight="20"
+              MinWidth="200"
+              HorizontalContentAlignment="Stretch"
+              VerticalContentAlignment="Stretch"
+              BorderThickness="1"
+              Margin="0"
+              Padding="0">
+    <ListViewItem.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../StyleDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </UserControl.Resources>
-    <ListViewItem>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-            <TextBlock Grid.ColumnSpan="2">
-                <TextBlock.Text>
-                    <Binding Path="PropertyName" />
-                </TextBlock.Text></TextBlock>
-            <CheckBox Grid.Column="2">
-                <CheckBox.IsChecked>
-                    <Binding Path="Value" />
-                </CheckBox.IsChecked>
-            </CheckBox>
-        </Grid>
-    </ListViewItem>
-</UserControl>
+    </ListViewItem.Resources>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <TextBlock Grid.ColumnSpan="3">
+            <TextBlock.Text>
+                <Binding Path="PropertyName" />
+            </TextBlock.Text></TextBlock>
+        <CheckBox Grid.Column="3">
+            <CheckBox.IsChecked>
+                <Binding Path="Value" />
+            </CheckBox.IsChecked>
+        </CheckBox>
+    </Grid>
+</ListViewItem>
