--- a/AutoCAD_Windows/AutoCAD_Windows/Property/ListItemDouble.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/ListItemDouble.xaml
@@ -56,8 +56,8 @@
             <Popup.PlacementTarget>
                 <Binding ElementName="box" />
             </Popup.PlacementTarget>
-            <Border Background="Yellow"
-                    BorderBrush="Yellow"
+            <Border Background="White"
+                    BorderBrush="Red"
                     BorderThickness="1"
                     CornerRadius="3"
                     Margin="1,1,1,1">
@@ -66,11 +66,7 @@
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
                            Margin="0"
-                           TextWrapping="Wrap">
-                    <TextBlock.MaxWidth>
-                        <Binding ElementName="box"
-                                 Path="Width" />
-                    </TextBlock.MaxWidth></TextBlock>
+                           TextWrapping="Wrap"></TextBlock>
             </Border>
         </Popup>
     </Grid>
