--- a/AutoCAD_Windows/AutoCAD_Windows/Property/ListItemString.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/ListItemString.xaml
@@ -1,7 +1,7 @@
-﻿<ListViewItem x:Class="WindowDictionary.Property.ListItemInteger"
+﻿<ListViewItem x:Class="WindowDictionary.Property.ListItemString"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
               xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
               xmlns:local="clr-namespace:WindowDictionary.Property"
               xmlns:converter="clr-namespace:WindowDictionary.Converters"
@@ -23,9 +23,6 @@
         </ResourceDictionary>
     </ListViewItem.Resources>
     <Grid Background="Transparent">
-        <Grid.Resources>
-            <converter:IntegerConverter x:Key="IntegerConverter" />
-        </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition />
@@ -35,14 +32,12 @@
         </Grid.ColumnDefinitions>
         <TextBlock Grid.ColumnSpan="2">
             <TextBlock.Text>
-                <Binding Path="Item.PropertyName"/>
-            </TextBlock.Text>
-        </TextBlock>
+                <Binding Path="Item.PropertyName" />
+            </TextBlock.Text></TextBlock>
         <TextBox x:Name="box"
                  Grid.Column="2"
                  Grid.ColumnSpan="3"
-                 PreviewTextInput="TextBox_Integer_PreviewTextInput"
-                 PreviewKeyDown="TextBox_Integer_PreviewKeyDown">
+                 PreviewTextInput="TextBox_String_PreviewTextInput">
             <TextBox.Text>
                 <Binding Path="Item.Value" />
             </TextBox.Text>
@@ -68,8 +63,7 @@
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
                            Margin="0"
-                           TextWrapping="Wrap">
-                </TextBlock>
+                           TextWrapping="Wrap"></TextBlock>
             </Border>
         </Popup>
     </Grid>
