--- a/AutoCAD_Windows/AutoCAD_Windows/Property/PropertyCreator.xaml
+++ b/AutoCAD_Windows/AutoCAD_Windows/Property/PropertyCreator.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WindowDictionary.Property.PropertyEditor"
+﻿<Window x:Class="WindowDictionary.Property.PropertyCreator"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,6 +14,10 @@
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
         Width="800">
+    <WindowChrome.WindowChrome>
+        <WindowChrome CaptionHeight="0"
+                      ResizeBorderThickness="1" />
+    </WindowChrome.WindowChrome>
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -41,11 +45,27 @@
                     </TextBlock.Text></TextBlock>
             </HierarchicalDataTemplate>
         </Grid.Resources>
-        <TextBlock Text="Property Editor" />
+        <TextBlock Grid.ColumnSpan="3"
+                   HorizontalAlignment="Center"
+                   Text="Property Creator"/>
         <TextBlock Grid.ColumnSpan="3"
                    Height="25"
                    Margin="0"
                    MouseDown="Menu_Grid_MouseDown" />
+        <Menu HorizontalAlignment="Left"
+              VerticalAlignment="Center"
+              Padding="0,3.5,0,3.5">
+            <MenuItem Header="File">
+                <MenuItem Click="New_File_Click"
+                          Header="New" />
+                <MenuItem Click="Open_File_Click" 
+                          Header="Open" />
+                <MenuItem Click="Save_Click"
+                          Header="Save" />
+                <MenuItem Click="Save_As_Click"
+                          Header="Save As" />
+            </MenuItem>
+        </Menu>
         <UniformGrid Columns="3"
                      Grid.Column="2"
                      HorizontalAlignment="Right">
@@ -151,7 +171,8 @@
                      Width="250">
             <Button Click="OK_Click"
                     Content="OK" />
-            <Button Click="Cancel_Click" Content="Cancel" />
+            <Button Click="Cancel_Click"
+                    Content="Cancel" />
         </UniformGrid>
     </Grid>
 </Window>
